add focus style for checkbox label

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -217,3 +217,9 @@ body {
         @apply p-6;
     }
 }
+
+.speaker-filter-checkbox:focus + label {
+    outline: 5px auto Highlight;
+    outline: 5px auto -webkit-focus-ring-color;
+    background-color: #343434;
+}
